ANOTHER SSH TEST

--- a/cat_clock/index.html
+++ b/cat_clock/index.html
@@ -19,7 +19,7 @@
 
         <h4>TIENES TIEMPO?
             <span id="clock">AQUI VA UN RELOJ</span>
-            <span id="clock">ADD FROM GITHUB, TEST SSH</span>
+            <span id="clock">ADD FROM GITHUB, FROM LENOVODF</span>
             
 
         </h4>
