config ssh lenovodf

--- a/cat_clock/index.html
+++ b/cat_clock/index.html
@@ -13,7 +13,7 @@
     <div class="page">
         <header>
             <h1>
-                PUSSY CLOCK!
+                PUSSY CLOCK, edited from nano, ubunto!
             </h1>
         </header>
 
